<resources>
    <string name="app_name" translatable="false">Crypto</string>
    <string name="action_settings" translatable="false">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous" translatable="false">Previous</string>
    <string name="password1">Пароль</string>
    <string name="password2">Повторите пароль</string>
    <string name="OpenFile" translatable="false">Открыть файл</string>
    <string name="HideShowPassword">Скрыть/Показать пароль</string>
    <string name="Decrypt">Расшифровать</string>
    <string name="EnterPassword">Введите пароль</string>
    <string name="DecryptFile">Расшифрование файла</string>
    <string name="Encrypt">Зашифровать</string>
    <string name="EncryptFile">Шифрование файла</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Preference Titles -->
    <string name="hash_header">Настройки хэширования</string>
    <string name="cipher_header">Настройки шифрования</string>
    <string name="other_header">Другие настройки</string>
    <string name="provider_header">Выбор провайдера</string>
    <string name="bouncy_castle">Использовать провайдер BС?</string>

    <!-- Hash Preferences -->
    <string name="hash_title">Алгоритм хэширования</string>
    <string name="hash_count">Количество итераций</string>
    <string name="set_count">Установить значение</string>
    <string name="min_1">Min = 1</string>
    <string name="max_16383">Max = 16383</string>

    <!-- Cipher Preferences -->
    <string name="cipher_title">Алгоритм шифрования</string>
    <string name="padding">Padding</string>
    <string name="ebc_title">Режим сцепления блоков</string>
    <string name="padding_title">Режим наполнения</string>
    <string name="cipher_count">Количество итераций</string>
    <string name="max_127">Max = 127</string>
    <string name="key_size">Длина ключа шифрования</string>

    <!-- Other Preference-->
    <string name="salt_title">Использовать соль</string>
    <string name="secondpassword_title">Спрашивать подтверждение пароля</string>
    <string name="password_flag">Проверка на сложность парольной фразы</string>
    <string name="deletefile_title">Удалять файл после шифрования</string>

    <!-- Const String-->
    <string name="encrypt_file">Зашифровать файл</string>
    <string name="decrypt_file">Расшифровать файл</string>
    <string name="test">Тест</string>
    <string name="Settings">Настройки</string>
    <string name="Certificate">Создать сертификат</string>
    <string name="CreateCertificate">Создание самоподписанного сертификата</string>
    <string name="EnterData">Введите данные</string>
    <string name="OrganizationName">Название организации</string>
    <string name="Password">Пароль</string>
    <string name="sign">Настройки цифровой подписи</string>
    <string name="sign_alg">Алгоритм цифровой подписи</string>
    <string name="cipherPassword_flag">Шифровать пароль?</string>
    <string name="common_name">Ваше имя</string>
    <string name="organizational_unit">Департамент/Отдел</string>
    <string name="organization_name">Название организации</string>
    <string name="locality">Город</string>
    <string name="state">Область</string>
    <string name="country">Код страны</string>
    <string name="chouse_certificate">Выберите сертификат</string>
    <string name="not_selected">Не выбрано</string>
    <string name="certificate_export">Экспортировать сертификат</string>
    <string name="password_keystore">Введите пароль от хранилища ключей</string>
    <string name="cert">Сертификаты</string>
    <string name="signatute_algorithm">Алгоритм цифровой подписи</string>


</resources>