<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.CertificateCreateFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:text="@string/CreateCertificate"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:textSize="20sp"
            android:text="@string/EnterData"/>

        <EditText
            android:id="@+id/common_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/common_name"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:textSize="20sp"
            tools:ignore="Autofill,TextFields" />

        <EditText
            android:id="@+id/organizational_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/organizational_unit"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:textSize="20sp"
            tools:ignore="Autofill,TextFields" />

        <EditText
            android:id="@+id/organization_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/organization_name"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:textSize="20sp"
            tools:ignore="Autofill,TextFields" />

        <EditText
            android:id="@+id/locality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/locality"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:textSize="20sp"
            tools:ignore="Autofill,TextFields" />

        <EditText
            android:id="@+id/state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/state"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:textSize="20sp"
            tools:ignore="Autofill,TextFields" />

        <EditText
            android:id="@+id/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/country"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:textSize="20sp"
            tools:ignore="Autofill,TextFields" />


        <EditText
            android:id="@+id/cerfpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:textSize="20sp"
            android:inputType="textPassword"
            tools:ignore="Autofill,TextFields" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/createCertificate"
            android:text="@string/Certificate"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:textSize="20sp"/>

    </LinearLayout>

</ScrollView>