<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.CertificateFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Certificate"
            android:id="@+id/Certificate"
            android:layout_marginTop="30sp"
            android:layout_gravity="center"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/certificate_export"
            android:id="@+id/certificate_export"
            android:layout_marginVertical="30sp"
            android:layout_gravity="center"/>

        <LinearLayout
            android:id="@+id/cert_export"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20sp"
                android:text="@string/chouse_certificate"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/cert_export_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_selected"
                android:layout_gravity="center"
                android:textSize="15sp" />

        </LinearLayout>

        <EditText
            android:id="@+id/password_certificate_export"
            style="@android:style/Widget.Holo.Light.AutoCompleteTextView"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/EnterPassword"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:singleLine="false"
            android:layout_marginVertical="30sp"
            android:textColorHighlight="#000000" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/HideShowPassword"
            android:id="@+id/password_see"
            android:layout_marginVertical="30sp"
            android:layout_gravity="center"/>

    </LinearLayout>

</FrameLayout>